--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     remote = myremote
 ['remote "myremote"']
     url = gdrive://1KbgV65SAVCC9olO6zxY7LJJw48ORRkCQ
+['remote "default"']
+    url = gdrive://1KbgV65SAVCC9olO6zxY7LJJw48ORRkCQ
